syntax = "proto3";

package rivet.backend.user.update;

import "proto/common.proto";
import "proto/backend/user.proto";

message Update {
	reserved 2, 3;

	oneof kind {
		UserUpdate update = 1;
		FollowCreate follow_create = 4;
		FollowDelete follow_delete = 5;
	}
}

message UserUpdate {
	reserved 1;
}

message FollowCreate {
	rivet.common.Uuid follower_user_id = 1;
}

message FollowDelete {
	rivet.common.Uuid follower_user_id = 1;
}
